fixing spacing

--- a/src/components/Staw/Staw.styl
+++ b/src/components/Staw/Staw.styl
@@ -1,5 +1,5 @@
 .staw
-  width 100%
+	width 100%
 	&__holder
 		display block
 		overflow hidden
@@ -7,7 +7,7 @@
 	&__roller
 		transform translateX(0)
 		display flex
-		transition .3s cubic-bezier(0.54, 0, 0, 0.84)
+		transition .3s ease-in-out
 	&__dots
 		display flex
 		align-items center
